# xpr-data-engineer

./: README.md  chapter01.py  data-architecture.drawio  main.py  pyproject.toml  sudent.py
example/: comments_01.py  person.py  variable_01.py
